<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/team_logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/stadium"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_top" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/team_stadium_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/stadium"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team_logo_img" />

        <LinearLayout
            android:id="@+id/stadium_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/team_stadium_img">

            <TextView
                android:id="@+id/stadium_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="roboto"
                android:gravity="start"
                android:text="@string/stadium_name"
                android:textColor="@color/neutral_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/team_stadium_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="roboto"
                android:gravity="start"
                android:textColor="@color/neutral_white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stadium_capcity_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/stadium_container">

            <TextView
                android:id="@+id/stadium_capcity_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="roboto"
                android:gravity="start"
                android:text="@string/stadium_capacity"
                android:textColor="@color/neutral_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stadium_capcity_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="roboto"
                android:gravity="start"
                android:textColor="@color/neutral_white"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/team_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/stadium_capcity_container">

            <TextView
                android:id="@+id/team_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="roboto"
                android:gravity="start"
                android:text="@string/team_name"
                android:textColor="@color/neutral_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/team_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="roboto"
                android:gravity="start"
                android:textColor="@color/neutral_white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/team_formed_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/team_container">

            <TextView
                android:id="@+id/team_formed_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="roboto"
                android:gravity="start"
                android:text="@string/team_formed_year"
                android:textColor="@color/neutral_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/team_formed_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="roboto"
                android:gravity="start"
                android:textColor="@color/neutral_white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/team_league_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/team_formed_container">

            <TextView
                android:id="@+id/team_league_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="roboto"
                android:gravity="start"
                android:text="@string/team_league"
                android:textColor="@color/neutral_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/team_league_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="roboto"
                android:gravity="start"
                android:textColor="@color/neutral_white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/team_country_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/team_league_container">

            <TextView
                android:id="@+id/team_country_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="roboto"
                android:gravity="start"
                android:text="@string/team_country"
                android:textColor="@color/neutral_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/team_country_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="roboto"
                android:gravity="start"
                android:textColor="@color/neutral_white"
                android:textSize="20sp" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:fontFamily="roboto"
            android:gravity="center"
            android:text="@string/team_description"
            android:textColor="@color/neutral_white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/team_country_container" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/team_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:fontFamily="roboto"
            android:gravity="center"
            android:textColor="@color/neutral_white"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/description_text" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dimen_10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dimen_10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/dimen_10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/dimen_10dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>